--- a/packages/SystemUI/res/values/screwd_strings.xml
+++ b/packages/SystemUI/res/values/screwd_strings.xml
@@ -261,4 +261,7 @@
     <string name="keyguard_indication_fast_charging_time">Fast Charging (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%s</xliff:g> until full)</string>
     <string name="keyguard_plugged_in_fast_charging">Fast Charging</string>
 
+    <!-- volte icon switch -->
+    <string name="status_bar_volte">VOLTE</string>
+
 </resources>
