--- a/packages/SystemUI/res/xml/tuner_prefs.xml
+++ b/packages/SystemUI/res/xml/tuner_prefs.xml
@@ -36,6 +36,10 @@
             android:key="managed_profile"
             android:title="@string/status_bar_work" />
 
+				<com.android.systemui.tuner.StatusBarSwitch
+        		android:key="volte"
+        		android:title="@string/status_bar_volte" />
+
         <com.android.systemui.tuner.StatusBarSwitch
             android:key="cast"
             android:title="@string/quick_settings_cast_title" />
