--- a/packages/SystemUI/res/values/screwd_strings.xml
+++ b/packages/SystemUI/res/values/screwd_strings.xml
@@ -49,7 +49,8 @@
 
     <!-- Screenshot QS Tile -->
     <string name="quick_settings_screenshot_label">Screenshot</string>
-    
+    <string name="quick_settings_region_screenshot_label">Partial screenshot</string>
+
     <!-- Reboot/Recovery QS Tile -->
     <string name="quick_settings_reboot_label">Reboot</string>
     <string name="quick_settings_reboot_recovery_label">Recovery</string>
