Add weather alternative to ambient bottom view [1/2]
Provide a brief weather info display alternative to
the ambient display bottom view unless device is charging
in which case show charging info

Change-Id: Ibb4341cd914b18c119ba170228a9d75edf8543d1
Signed-off-by: sayan7848 <sayan7848@gmail.com>

--- a/packages/SystemUI/res/values/screwd_strings.xml
+++ b/packages/SystemUI/res/values/screwd_strings.xml
@@ -277,4 +277,7 @@
     <string name="quick_settings_music_play">Play</string>
     <string name="quick_settings_music_pause">Pause</string> 
     
+    <!-- The contents of the Ambient Weather bottom view -->
+    <string name="ambient_weather_info">%1$s &amp; %2$s</string>
+    
 </resources>
