Allow for the 'Small Clock' analog padding to be changed per device
Signed-off-by: sayan7848 <sayan7848@gmail.com>

--- a/packages/SystemUI/res/values/screwd_dimens.xml
+++ b/packages/SystemUI/res/values/screwd_dimens.xml
@@ -74,5 +74,7 @@
 
     <!-- Big clock dozing -->
     <dimen name="dozing_big_clock_padding" format="float">0.38</dimen>
+    <!-- Small clock dozing -->
+    <dimen name="dozing_small_clock_padding" format="float">0.33</dimen>
 
 </resources>
