--- a/core/res/res/values/screwd_strings.xml
+++ b/core/res/res/values/screwd_strings.xml
@@ -73,4 +73,9 @@
 
     
     <string name="app_blacklist">Blacklist app</string>
+
+		<string name="custom_clock_styles" translatable="false">
+        digital,digital_bold,sammy,sammy_bold,analog
+    </string>
+
 </resources>
