--- a/core/res/res/values/screwd_symbols.xml
+++ b/core/res/res/values/screwd_symbols.xml
@@ -274,4 +274,7 @@
   <java-symbol type="anim" name="last_app_in" />
   <java-symbol type="anim" name="last_app_out" />
 
+	<!-- Custom clocks -->
+  <java-symbol type="string" name="custom_clock_styles" />
+
 </resources>
