--- a/packages/SystemUI/res/values/screwd_strings.xml
+++ b/packages/SystemUI/res/values/screwd_strings.xml
@@ -292,4 +292,7 @@
     <string name="quick_settings_expanded_desktop">Expanded</string>
     <string name="quick_settings_expanded_desktop_off">Normal</string>
 
+    <!-- OnTheGo Tile -->
+    <string name="quick_settings_onthego_label">On-The-Go</string>
+
 </resources>
